--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <p id="date"></p>
+    <p id="date1"></p>
+    <p id="date2"></p>
     <script src="script.js"></script>
 </body>
 </html>
